# red-purple

./: .gitignore  Dockerfile  background.txt  config.json  main.py  pyproject.toml  test.py  visualize.py
redpurple/: docker_runtime.py  main.py
redpurple/agent/: __main__.py
redpurple/agent/llm/: llm.py  memory_compressor.py
redpurple/agent/tools/: __init__.py  registry.py
redpurple/agent/tools/terminal/: terminal_actions.py
runs/run-263932c6/: events.jsonl
source/: Dockerfile  available_packages.json  benchmark.py  config.py  docker-compose.yml  docker_runtime.py  main.py  seed.py  server.py
source/agent/: Dockerfile  __main__.py  base_prompt.py  compactor.py  docker-compose.yml  extractor.py  runner.py  seed.py  server.py  tools.py  tracer.py  utils.py
source/agent/llm/: llm.py
source/agent/tools/: __init__.py
source/agent/tools/finish/: finish_actions.py  finish_actions_schema.xml
source/agent/tools/terminal/: terminal_actions.py  terminal_actions_schema.xml
source/dataset/: create_splits.py  splits.json
source/llm/: llm.py
source/optimize_anything/: LLM_as_judge.py  adapter.py  cache.py  callbacks.py  core_loop.py  dataset.py  evaluator.py  logger.py
source/tracer/: __init__.py  model_prices.json  sync_openrouter_models.py  tracer.py
